--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ osx_image: xcode8.1
 rvm:
 - 2.2
 before_install:
-- chmod a+x ./Scripts/install.sh
+- chmod a+x ./Scripts/install-unity.sh
 - chmod a+x ./Scripts/build.sh
 install:
-- ./Scripts/install.sh
+- ./Scripts/install-unity.sh
 script:
 - ./Scripts/build.sh
